--- a/src/Components/LoginPage/Login.css
+++ b/src/Components/LoginPage/Login.css
@@ -14,7 +14,13 @@
     
 }
 
-.usernameInput, .passwordInput{
+.reg{
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+}
+
+.usernameInput, .passwordInput, .emailInput{
     outline: none;
     width: 80%;
     margin: 0 auto;
@@ -22,7 +28,7 @@
     border-radius: 12px;
     border: black 3px solid;
     font-size: 17px;
-    margin-top: -40px;
+    margin-top: 20px;
 }
 
 .submitButton{
@@ -37,5 +43,11 @@
     border-radius: 20px;
     cursor: pointer;
     box-shadow: 0 20px 45px -10px #0d0f1281;
+    transition: .5s ease;
     margin: 0 auto;
+}
+
+.submitButton:hover{
+    background-color: #3B55EA;
+    box-shadow: 0px 10px 15px 0px #0047b281;
 }
