--- a/src/Components/Rating/addRating.css
+++ b/src/Components/Rating/addRating.css
@@ -86,8 +86,6 @@ ul{
     height: auto;
     color: black;
     position: absolute;
-    right: 20px;
-    top: -20px;
     font-size: 25px;
 }
 
@@ -103,9 +101,25 @@ ul{
     word-break: break-all;
 }
 
+.buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 120px;
+}
+
 .editButton{
     width: auto;
     height: auto;
     background: none;
     color: black;
+    margin: 0;
+}
+
+.allReviewsContainer{
+    margin-top: 100px;
+}
+
+footer{
+    margin-top: 60px;
 }
